# ColumbaProject

./: .gitignore  CLAUDE.md  Makefile
.github/workflows/: build-windows.yml
backend/: Cargo.toml
backend/src/: ai.rs  hardware.rs  lib.rs  main.rs  quant.rs
docs/brainstorms/: 2026-05-26-tauri-desktop-app-brainstorm.md  2026-05-26-windows-offline-bundle-brainstorm.md
docs/superpowers/plans/: 2026-05-24-indicators.md
docs/superpowers/specs/: 2026-05-24-indicators-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ChartManager.ts  SimulationEngine.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
